<resources>
    <string name="app_name">SeeAstro</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="run">Run</string>
    <string name="useMap">Use Map</string>
    <string name="objectName">Name</string>
    <string name="objectBrightness">Ma</string>
    <string name="objectType">Type</string>
    <string name="objectRADEC">RA/Dec</string>
    <string name="loading">Loading…</string>
    <string name="action_geolocate">Pick a Place</string>

    <string name="userLatDeg">userLatDeg</string>
    <string name="userLatMin">userLatMin</string>
    <string name="userLatSec">userLatSec</string>
    <string name="userLongDeg">userLongDeg</string>
    <string name="userLongMin">userLongMin</string>
    <string name="userLongSec">userLongSec</string>
    <string name="userNorthSouth">userNorthSouth</string>
    <string name="userEastWest">userEastWest</string>

    <string name="defaultLatCompass">N</string>
    <string name="defaultLongCompass">E</string>

    <string name="toggleNorth">N</string>
    <string name="toggleSouth">S</string>
    <string name="toggleEast">E</string>
    <string name="toggleWest">W</string>

    <string name="hintDeg">Deg</string>
    <string name="hintMin">Min</string>
    <string name="hintSec">Sec</string>

    <string name="choose_types">Choose Types:</string>

    <!--Object Types-->
    <string name="star">Star</string>
    <string name="double_star">Double Star</string>
    <string name="open_cluster">Open Cluster</string>
    <string name="globular_cluster">Globular Cluster</string>
    <string name="galaxy">Galaxy</string>
    <string name="galaxy_pair">Galaxy Pair</string>
    <string name="galaxy_triplet">Galaxy Triplet</string>
    <string name="galaxy_group">Galaxy Group</string>
    <string name="planetary_nebula">Planetary Nebula</string>
    <string name="hii_ionized_region">HII Ionized Region</string>
    <string name="dark_nebula">Dark Nebula</string>
    <string name="emission_nebula">Emission Nebula</string>
    <string name="nebula">Nebula</string>
    <string name="reflection_nebula">Reflection Nebula</string>
    <string name="supernova_remnant">Supernova Remnant</string>
    <string name="nova">Nova</string>
    <string name="title_activity_maps">Map</string>


</resources>
