<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_button"
        android:title=""
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_search"
        />
    <item
        android:id="@+id/action_settings"
        android:title=""
        app:showAsAction="never"

        />
    <item
        android:id="@+id/choose_types"
        android:title="@string/choose_types">
        <menu>
            <group
                android:id="@+id/types_group"
                android:checkableBehavior="all">

                <item
                    android:id="@+id/star"
                    android:title="@string/star"
                    android:checked="true"/>
                <item
                    android:id="@+id/double_star"
                    android:title="@string/double_star"
                    android:checked="true"/>
                <item
                    android:id="@+id/open_cluster"
                    android:title="@string/open_cluster"
                    android:checked="true"/>
                <item
                    android:id="@+id/globular_cluster"
                    android:title="@string/globular_cluster"
                    android:checked="true"/>
                <item
                    android:id="@+id/galaxy"
                    android:title="@string/galaxy"
                    android:checked="true"/>
                <item
                    android:id="@+id/galaxy_pair"
                    android:title="@string/galaxy_pair"
                    android:checked="true"/>
                <item
                    android:id="@+id/galaxy_triplet"
                    android:title="@string/galaxy_triplet"
                    android:checked="true"/>
                <item
                    android:id="@+id/galaxy_group"
                    android:title="@string/galaxy_group"
                    android:checked="true"/>
                <item
                    android:id="@+id/planetary_nebula"
                    android:title="@string/planetary_nebula"
                    android:checked="true"/>
                <item
                    android:id="@+id/hii_ionized_region"
                    android:title="@string/hii_ionized_region"
                    android:checked="true"/>
                <item
                    android:id="@+id/dark_nebula"
                    android:title="@string/dark_nebula"
                    android:checked="true"/>
                <item
                    android:id="@+id/emission_nebula"
                    android:title="@string/emission_nebula"
                    android:checked="true"/>
                <item
                    android:id="@+id/nebula"
                    android:title="@string/nebula"
                    android:checked="true"/>
                <item
                    android:id="@+id/reflection_nebula"
                    android:title="@string/reflection_nebula"
                    android:checked="true"/>
                <item
                    android:id="@+id/supernova_remnant"
                    android:title="@string/supernova_remnant"
                    android:checked="true"/>
                <item
                    android:id="@+id/nova"
                    android:title="@string/nova"
                    android:checked="true"/>
            </group>
        </menu>
    </item>

</menu>